# vumeter

./: .gitignore  .gitmodules  LICENSE.txt  README.md  TODO.md
code/audio-board-2/: Cargo.toml  audio-board.hex  audio_board_h.hex  build.rs  program.sh
code/audio-board-2/.cargo/: config.toml
code/audio-board-2/src/: lib.rs  main.rs  spdif.rs  switch.rs  timer.rs  uart.rs
code/audio-board-2/src/lib/: spdif.rs  switch.rs  timer.rs
code/audio-board-2/src/lib/c/: led.c  timer.c  uart.c
code/audio_board/: Cargo.toml  build.rs  linker_t4.x  memory.x  prog.hex  prog.hex_orig_NOK  program.sh
code/audio_board/src/lib/: spdif.rs  switch.rs  timer.rs  uart.rs
code/audio_board/src/lib/c/: led.c  spdif.c  uart.c
code/audio_board/src/lib/c/cores/teensy4/: Makefile
code/audio_board_rust/: .gitignore  Cargo.toml  audio_board_h.hex  teensy40_load.cmd
code/audio_board_rust/src/lib/: lib.rs  spdif.rs  switch.rs  timer.rs
code/linux_control/: Cargo.toml
code/test/: Cargo.toml
code/test/src/: main.rs
code/tube_board/: Cargo.toml  build.rs  ice.cfg  program.sh  xplained.cfg
code/vumeter_lib/: Cargo.toml  README.md
code/vumeter_lib/src/: audio_hw.rs  bandpass.rs  lib.rs  protocol.rs  shared.rs  tube_hw.rs
debugging/: 0x000006b0.2ndfromright.core.42000  0x000006c8.farright.core.42000  0x000006e8.left.busted.core.42000  Terminal Saved Output.txt
schematics/audio-board/: audio-board-cache.lib  audio-board-eagle-import.lib  audio-board.kicad_pcb  audio-board.kicad_pcb-bak  audio-board.kicad_prl  audio-board.kicad_pro  audio-board.kicad_sch  audio-board.net  audio-board.pro  audio-board.sch  audio-board.sch-bak  sym-lib-table
schematics/audio-board/gerbers/: audio-board-B_Cu.gbl  audio-board-B_Mask.gbs  audio-board-B_SilkS.gbo  audio-board-Edge_Cuts.gm1  audio-board-F_Cu.gtl  audio-board-F_Mask.gts  audio-board-F_SilkS.gto  audio-board-NPTH.drl  audio-board-PTH.drl
schematics/bom/: rs.txt
schematics/case/: bottom.FCStd
schematics/case/macros/: audio.FCMacro  bottom.FCMacro
schematics/custom/: vumeter.lib
schematics/custom/vumeter.pretty/: 200MSP3T4B6M2QE.kicad_mod  Cliff_ORJ-8.kicad_mod  NCH8200HV.kicad_mod  PinHeader_2x05_P1.27mm_Vertical-smallholes.kicad_mod  S-2151.kicad_mod  TO-126-3_Vertical-HV.kicad_mod  Teensy40.kicad_mod  fixed-IN-13-footprint-wide-sockets.kicad_mod  fixed-IN-13-footprint.kicad_mod
schematics/tube-board/: vumeter-schematics  vumeter-schematics-cache.lib  vumeter-schematics.kicad_pcb  vumeter-schematics.kicad_pcb-bak  vumeter-schematics.kicad_prl  vumeter-schematics.kicad_pro  vumeter-schematics.kicad_sch  vumeter-schematics.net  vumeter-schematics.pro  vumeter-schematics.sch  vumeter-schematics.sch-bak
schematics/tube-board/gerbers/: vumeter-schematics-B_Cu.gbl  vumeter-schematics-B_Mask.gbs  vumeter-schematics-B_SilkS.gbo  vumeter-schematics-Edge_Cuts.gm1  vumeter-schematics-F_Cu.gtl  vumeter-schematics-F_Mask.gts  vumeter-schematics-F_SilkS.gto  vumeter-schematics-PTH.drl
schematics/tube-offset-1/: tube-offset-1-cache.lib  tube-offset-1.kicad_pcb  tube-offset-1.net  tube-offset-1.pro  tube-offset-1.sch
schematics/tube-offset-1/gerbers/: tube-offset-1-B_Cu.gbl  tube-offset-1-B_Mask.gbs  tube-offset-1-B_SilkS.gbo  tube-offset-1-Edge_Cuts.gm1  tube-offset-1-F_Cu.gtl  tube-offset-1-F_Mask.gts  tube-offset-1-F_SilkS.gto  tube-offset-1-PTH.drl
schematics/tube-offset-2/: tube-offset-2-cache.lib  tube-offset-2.kicad_pcb  tube-offset-2.net  tube-offset-2.pro  tube-offset-2.sch
schematics/tube-offset-2/gerbers/: tube-offset-2-B_Cu.gbl  tube-offset-2-B_Mask.gbs  tube-offset-2-B_SilkS.gbo  tube-offset-2-Edge_Cuts.gm1  tube-offset-2-F_Cu.gtl  tube-offset-2-F_Mask.gts  tube-offset-2-F_SilkS.gto  tube-offset-2-PTH.drl
