[package]
name = "vumeter_sound"
version = "0.1.0"
authors = ["will <will@yager.io>"]
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
#bin.path = "bin"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
imxrt-ral = "0.5.1"
imxrt1062-pac = "0.2.1"
embedded-hal = "0.2.7"
nb = "1.1.0"
imxrt-rt = { version = "0.1.1", features = ["device"] }
teensy4-bsp = "0.4.2"
log = { version = "0.4.19", features = ["release_max_level_info"] }
panic-halt = "0.2.0"
libm = "0.2.7"
biquad = "0.4.2"
cty = "0.2.2"
volatile="0.5.1"

[build-dependencies]
cc = "1.0.79"
#imxrt-rt = { version = "0.1.1", features = ["device"] }

[dependencies.vumeter_lib]
path = "../vumeter_lib"
version = "~0.1"


[[bin]]
name = "main"

[lib]
name = "boardlib"
path = "src/lib/lib.rs"
