[package]
name = "audio-board-2"
version = "0.1.0"
authors = ["William Yager <will@yager.io>"]
edition = "2021"

[dependencies]
cortex-m = "0.7"
embedded-hal = "0.2"
teensy4-pins = "0.3.1"
nb = "~0.1"
log = "0.4"
teensy4-panic = "0.2"
cty = "~0.2.1"
ssd1306 = "0.8.1"
embedded-graphics = "0.8.1"
volatile-register = "0.2.1"

[dependencies.vumeter_lib]
path = "../vumeter_lib"
version = "~0.1"

[dependencies.teensy4-bsp]
version = "0.4"
features = [
    # Use the BSP's runtime. This lets you write your
    # `main()` function.
    "rt",
    # Remove me if you don't want logging.
    "usb-logging",
]

[lib]
name = "boardlib"
path = "src/lib/lib.rs"

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
