[package]
name = "vumeter_test"
version = "0.1.0"
authors = ["will <will@yager.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "~3.3.0"
rodio = "~0.10.0"
cpal = "~0.11.0"
biquad = "~0.3.0"
rand = "~0.7.3"
itertools = "~0.7.8"


[dependencies.vumeter_lib]
path = "../vumeter_lib"
version = "~0.1"
