[package]
name = "vumeter_main"
version = "0.1.0"
authors = ["will <will@yager.io>"]
edition = "2018"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
#bin.path = "bin"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "s"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2"
nb = "~0.1"
#cortex-m-semihosting = "0.3.5"
panic-halt = "~0.2"
libm = "~0.2.1"
cty = "~0.2.1"

atsamd11c14a = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed"}
samd11_bare = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed"}
atsamd-hal = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed", features=["unproven"]}

[build-dependencies]
cc = "~1.0.48"


[dependencies.vumeter_lib]
path = "../vumeter_lib"
version = "~0.1"


[dependencies.cortex-m-rt]
version = "~0.6"
optional = true


[features]
# ask the HAL to enable atsamd11c14a support
default = ["rt", "atsamd-hal/samd11c14a"]
rt = ["cortex-m-rt", "atsamd-hal/samd11c14a-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[[bin]]
name = "main"
