[package]
name = "vumeter_main"
version = "0.2.0"
authors = ["will <will@yager.io>"]
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
#bin.path = "bin"
#build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = "s"

[dependencies]
cortex-m = "0.7.4"
embedded-hal = "0.2.7"
nb = "1.0.0"
#cortex-m-semihosting = "0.3.5"
panic-halt = "~0.2"
libm = "0.2.2"
cty = "0.2.2"
biquad = "0.4.2"

atsamd11c = "0.12.0"
samd11_bare = "0.8.0"
atsamd-hal = "0.15.0"
#atsamd11c14a = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
#samd11_bare = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
#atsamd-hal = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c", features=["unproven"]}

[build-dependencies]
cc = "1.0.73"


[dependencies.vumeter_lib]
path = "../vumeter_lib"
version = "~0.1"


[dependencies.cortex-m-rt]
version = "0.7.1"
optional = true


[features]
# ask the HAL to enable atsamd11c14a support
default = ["rt", "atsamd-hal/samd11c"]
rt = ["cortex-m-rt", "atsamd-hal/samd11c-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[[bin]]
name = "main"
